platform/manifests/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: candle
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
